tdf#126751 Fix crash when inserting hyperlink into empty textbox

Change-Id: Ie1a847d72ea65073100466a759add130fbe16f55
Reviewed-on: https://gerrit.libreoffice.org/77139
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>